<resources>
    <string name="app_name">Hotel_Vista_Mobile_App</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_for_new_user">Register For New user</string>
    <string name="hotel_vista">Hotel Vista</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="users">Users</string>
    <string name="todo">TODO</string>
    <string name="rooms">Rooms</string>
    <string name="buffet_tickets">Buffet Tickets</string>
    <string name="room_cleanings">Room Cleanings</string>
    <string name="payrolls">Payrolls</string>
    <string name="reservations">Reservations</string>
    <string name="add_user">Add User</string>
    <string name="address">Address</string>
    <string name="_1">1</string>
    <string name="user_name">User Name</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="user_address">User Address</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="room_type">Room Type</string>
    <string name="room_status">Room Status</string>
    <string name="floor_number">Floor Number</string>
    <string name="add_room">Add Room</string>
    <string name="update_room">Update Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_type">Employee Type</string>
    <string name="employee_netPay">Net Pay</string>
    <string name="add_payroll">Add Payroll</string>
    <string name="update_payroll">Update Payroll</string>
    <string name="delete_payroll">Delete Payroll</string>
</resources>