<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/payrollMainLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#667BC6"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/payroll_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/employee_name"
                app:layout_constraintStart_toEndOf="@+id/payroll_id"
                app:layout_constraintTop_toTopOf="@+id/payroll_id" />

            <TextView
                android:id="@+id/employee_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/employee_type"
                app:layout_constraintStart_toStartOf="@+id/employee_name"
                app:layout_constraintTop_toBottomOf="@+id/employee_name" />

            <TextView
                android:id="@+id/employee_netPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_netPay"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>