<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".room.UpdateRoomActivity"
    android:background="@drawable/back2">


    <EditText
        android:id="@+id/updateRoomType"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/bedroom_parent_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/room_type"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/updateRoomStatus"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/event_available_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/room_status"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateRoomType"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/updateFloorNumber"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_home_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/floor_number"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FBFAFA"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateRoomStatus"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonUpdateRoom"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/btn_bg"
        android:text="@string/update_room"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateFloorNumber"
        app:layout_constraintVertical_bias="0.891" />
    <Button
        android:id="@+id/buttonDeleteRoom"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg"
        android:text="@string/delete_room"
        android:textColor="#F5004F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdateRoom"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>