<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payroll.UpdatePayrollActivity"
    android:background="@drawable/back2">


    <EditText
        android:id="@+id/updateEmployeeType"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/person_pin"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_type"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmployeeName"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/updateEmployeeName"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/updateNetPay"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/baseline_attach_money_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/employee_netPay"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FBFAFA"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEmployeeType"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonUpdatePayroll"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/btn_bg"
        android:text="@string/update_payroll"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateNetPay"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/buttonDeletePayroll"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg"
        android:text="@string/delete_payroll"
        android:textColor="#F5004F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdatePayroll"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>